force-app/main/default/objects/Timestamp_Log__c.object
<CustomObject>
    <description>Stores the time stamps and other information based on field changes.</description>
    <fields>
        <fullName>ACP_Last_Modified_By_Name__c</fullName>
        <description>SMST Admissions - Last Modified By Name from Application Course Preference.</description>
        <label>ACP Last Modified By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SMST Admissions - Last Modified by From Application Course Preference.</description>
        <label>ACP Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timestamp_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments_On_Hold__c</fullName>
        <description>SMST Admissions - Additional On Hold Comments of the Application Course Preference.</description>
        <label>Additional Comments (On Hold)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <description>SMST Admissions - Admission Category of Application Course Preference.</description>
        <label>Admission Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference_Name__c</fullName>
        <description>SMST Admissions - Name of Application Course Preference.</description>
        <label>Application Course Preference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SMST Admissions - Lookup to Application Course Preference.</description>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Timestamp Logs</relationshipLabel>
        <relationshipName>Timestamp_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_No__c</fullName>
        <description>SMST Admissions - Application No. of the Application Course Preference.</description>
        <label>Application No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>SMST Admissions - Course Code of Application Course Preference.</description>
        <label>Course Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level__c</fullName>
        <description>SMST Admissions - Course Level of Application Course Preference.</description>
        <label>Course Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Datetime a field has been updated.</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>End Date Time when the field is changed.</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field Name of the field subject for timestamp.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <description>Field name value.</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Period__c</fullName>
        <description>SMST Admissions - Intake Period of Application Course Preference.</description>
        <label>Intake Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>SMST Admissions - Location of Application Course Preference.</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <description>SMST Admissions - Managing Faculty of Application Course Preference.</description>
        <label>Managing Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>Old value of the field value.</description>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <description>SMST Admissions - On Hold Reason of the Application Course Preference.</description>
        <label>On Hold Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>SMST Admissions - Owner of the Application Course Preference</description>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <description>SMST Admissions - Owner Team of the Application Course Preference.</description>
        <label>Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Id__c</fullName>
        <description>Record id of the parent record.</description>
        <label>Parent Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <description>Object Name of the Parent Record. e.g. Account, Application Course Preference</description>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Id__c</fullName>
        <description>SMST Admissions - Person Id of Application Course Preference.</description>
        <label>Person Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Reason__c</fullName>
        <description>SMST Admissions - Release Reason of the Application Course Preference.</description>
        <label>Release Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start Date Time when the field is change.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Turn_Around_Time__c</fullName>
        <description>Calculated time based on start time and end time.</description>
        <label>Turn Around Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timestamp Log</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Time Stamp Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timestamp Logs</pluralLabel>
    <recordTypes>
        <fullName>Admissions</fullName>
        <active>true</active>
        <description>Record type for SMST Admissions</description>
        <label>Admissions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>